--- a/derivatives.ipynb
+++ b/derivatives.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN5mYFax9bsGIy6v1xp+AVd",
+      "authorship_tag": "ABX9TyM0FTUjJMjzv1ZbtHpiuQ7S",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 12,
       "metadata": {
         "id": "kazKtiPfMyUU"
       },
@@ -39,38 +39,89 @@
       "source": [
         "import jax.numpy as jnp\n",
         "from jax import grad, jit, vmap\n",
-        "from jax import random"
+        "from jax import random\n",
+        "from scipy.stats import norm\n",
+        "import numpy as np"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Black Scholes model"
+      ],
+      "metadata": {
+        "id": "JlwAlUMEeyHy"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        "key = random.PRNGKey(0)\n",
-        "x = random.normal(key, (10,))\n",
-        "print(x)"
+        "def sim_gbm(n_timestamp, N_paths, mu, sigma, dt = 1/365, S0 = 1):\n",
+        "  key = random.PRNGKey(0)\n",
+        "  Z = random.normal(key, (n_timestamp,N_paths))\n",
+        "  arr = jnp.exp((mu - sigma**2/2)*dt + sigma*(dt)**0.5*Z)\n",
+        "  S0_arr = jnp.array([S0]*N_paths).reshape(1,-1)\n",
+        "  S = jnp.concatenate((S0_arr, arr), axis=0)\n",
+        "  S_arr = jnp.cumprod(S, axis = 0)\n",
+        "  return S_arr\n",
+        "\n",
+        "def call_option_mc(T, N_paths, r, sigma, strike, S0 = 1):\n",
+        "  # simualate S at maturity\n",
+        "  S_path = sim_gbm(1, N_paths, mu=r, sigma=sigma, dt = 1, S0 = S0)\n",
+        "  ST = S_path[-1, :]\n",
+        "  payout = jnp.maximum(0, ST - strike)\n",
+        "  price = jnp.exp(-r*T)*jnp.mean(payout)\n",
+        "  return jnp.asarray(price)\n",
+        "\n",
+        "def call_option_bs(T, r, sigma, strike, S0 = 1):\n",
+        "  d1 = 1/(sigma*np.sqrt(T))*(np.log(S0/strike) + (r - sigma**2/2)*T)\n",
+        "  d2 = d1 - sigma*np.sqrt(T)\n",
+        "  price = norm.cdf(d1)*S0 - norm.cdf(d2)*strike*np.exp(-r*T)\n",
+        "  return price\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "WNQQsZiaM157"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "T = 1\n",
+        "r = 0.05\n",
+        "sigma = 0.2\n",
+        "S0 = 100\n",
+        "strike = 90\n",
+        "call_mc = call_option_mc(T = T, N_paths=100_000, r=r, sigma=sigma, strike=strike, S0 = S0)\n",
+        "call_bs = call_option_bs(T=T, r=r, sigma=sigma, strike=strike, S0=S0)"
+      ],
+      "metadata": {
+        "id": "b0oHzSiJM7lc"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"BS price: {call_bs} ; MC price: {call_mc}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "WNQQsZiaM157",
-        "outputId": "268580aa-72c2-4af5-b86e-9ab46279cc23"
+        "id": "KqeE5TCrZXFJ",
+        "outputId": "bfc7f58f-1321-40ff-9ba1-2f7e954fc704"
       },
-      "execution_count": 2,
+      "execution_count": 17,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:jax._src.xla_bridge:No GPU/TPU found, falling back to CPU. (Set TF_CPP_MIN_LOG_LEVEL=0 and rerun for more info.)\n"
-          ]
-        },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[-0.3721109   0.26423115 -0.18252768 -0.7368197  -0.44030377 -0.1521442\n",
-            " -0.67135346 -0.5908641   0.73168886  0.5673026 ]\n"
+            "BS price: 16.580079495561144 ; MC price: 16.778467178344727\n"
           ]
         }
       ]
@@ -79,7 +130,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "b0oHzSiJM7lc"
+        "id": "xanXYR7uZinh"
       },
       "execution_count": null,
       "outputs": []
