added heston MC

--- a/derivatives.ipynb
+++ b/derivatives.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyM0FTUjJMjzv1ZbtHpiuQ7S",
+      "authorship_tag": "ABX9TyP3zpCWw/afYgTOZ48Vm3Os",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -127,10 +127,94 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Heston Model"
+      ],
+      "metadata": {
+        "id": "IqiKJqmwmUmR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "def sim_heston(n_timestamp, n_paths,dt, rho, r, kappa, theta, sigma,S0, V0):\n",
+        "  key = random.PRNGKey(0)\n",
+        "  Z1 = random.normal(key, (n_timestamp,n_paths))\n",
+        "  Z2 = random.normal(key, (n_timestamp,n_paths))\n",
+        "  Zv = Z1\n",
+        "  Zs = rho*Z1 + (1 - rho**2)**0.5 * Z2\n",
+        "  del Z1, Z2\n",
+        "  S_list = []\n",
+        "  S0_arr = jnp.array([S0]*n_paths).reshape(1,-1)\n",
+        "  S_list.append(S0_arr)\n",
+        "  Vt = jnp.array([V0]*n_paths)\n",
+        "  for i in range(n_timestamp):\n",
+        "    St = S_list[i]\n",
+        "    dV = kappa*(theta - Vt)*dt + sigma*jnp.sqrt(Vt)*(dt**0.5)*Zv[i, :]\n",
+        "    V_t1 = Vt + dV\n",
+        "    dS = r*St*dt + jnp.sqrt(Vt)*St*(dt**0.5)*Zs[i,:]\n",
+        "    S_t1 = St + dS\n",
+        "    Vt = V_t1\n",
+        "    S_list.append(S_t1.reshape(1,-1))\n",
+        "\n",
+        "  S_arr = jnp.concatenate(S_list, axis = 0)\n",
+        "  return S_arr\n",
+        "\n",
+        "def call_option_heston_mc(T, n_paths, rho, r, kappa, theta, sigma,S0, V0, strike):\n",
+        "  # simualate S at maturity\n",
+        "  S_path = sim_heston(1, n_paths,1, rho, r, kappa, theta, sigma,S0, V0)\n",
+        "  ST = S_path[-1, :]\n",
+        "  payout = jnp.maximum(0, ST - strike)\n",
+        "  price = jnp.exp(-r*T)*jnp.mean(payout)\n",
+        "  return jnp.asarray(price)"
+      ],
+      "metadata": {
+        "id": "xanXYR7uZinh"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "call_heston_mc = call_option_heston_mc(T=1, n_paths=10_000, rho=0.5, r=0.05, kappa=1, theta=1, sigma=0.2,S0=100, V0=0.1, strike=90)"
+      ],
+      "metadata": {
+        "id": "tMuELFjkoP1Q"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(call_heston_mc)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fVBrRRPyq0Sk",
+        "outputId": "1d7e1079-2771-4ba4-f295-8a233a437e76"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "24.94186\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "xanXYR7uZinh"
+        "id": "1GARVPERrCwG"
       },
       "execution_count": null,
       "outputs": []
