added heston model

--- a/derivatives.ipynb
+++ b/derivatives.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "toc_visible": true,
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyP3zpCWw/afYgTOZ48Vm3Os",
+      "authorship_tag": "ABX9TyM7zhYLkn1MXIZruMLdY0D3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 2,
       "metadata": {
         "id": "kazKtiPfMyUU"
       },
@@ -83,7 +83,7 @@
       "metadata": {
         "id": "WNQQsZiaM157"
       },
-      "execution_count": 13,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -100,7 +100,7 @@
       "metadata": {
         "id": "b0oHzSiJM7lc"
       },
-      "execution_count": 16,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -113,9 +113,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KqeE5TCrZXFJ",
-        "outputId": "bfc7f58f-1321-40ff-9ba1-2f7e954fc704"
+        "outputId": "6733326f-45e5-4fcc-d6da-3d3c8b23aadc"
       },
-      "execution_count": 17,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,23 +168,98 @@
         "  ST = S_path[-1, :]\n",
         "  payout = jnp.maximum(0, ST - strike)\n",
         "  price = jnp.exp(-r*T)*jnp.mean(payout)\n",
-        "  return jnp.asarray(price)"
+        "  return jnp.asarray(price)\n",
+        "\n",
+        "\n",
+        "def get_heston_cfun(j, kappa, theta, rho, lam, T, q = 0):\n",
+        "  a = kappa*theta\n",
+        "  if j == 1:\n",
+        "    uj = 1/2\n",
+        "    bj = kappa + lam - rho*sigma\n",
+        "  else:\n",
+        "    uj = -1/2\n",
+        "    bj = kappa + lam\n",
+        "\n",
+        "  def cfun(psi, t, xt, vt):\n",
+        "    tau = T - t\n",
+        "    dj = np.sqrt((bj - rho*sigma*1j*psi)**2 - sigma**2*(2*1j*uj*psi - psi**2))\n",
+        "    gj = (bj - rho*sigma*1j*psi + dj)/(bj - rho*sigma*1j*psi - dj)\n",
+        "\n",
+        "    C = (r-q)*1j*psi*tau + a/sigma**2*((bj - rho*sigma*1j*psi + dj)*tau - 2*np.log((1-gj*np.exp(dj*tau))/(1-gj)))\n",
+        "    D = (bj - rho*sigma*1j*psi + dj)/sigma**2*((1-np.exp(dj*tau))/(1-gj*np.exp(dj*tau)))\n",
+        "    f =  np.exp(C + D*vt + 1j*psi*xt)\n",
+        "    return f\n",
+        "\n",
+        "  return cfun\n",
+        "\n",
+        "def simpson13(x0,xn,n, f):\n",
+        "    # calculating step size\n",
+        "    h = (xn - x0) / n\n",
+        "\n",
+        "    # Finding sum\n",
+        "    integration = f(x0) + f(xn)\n",
+        "\n",
+        "    for i in range(1,n):\n",
+        "        k = x0 + i*h\n",
+        "\n",
+        "        if i%2 == 0:\n",
+        "            integration = integration + 2 * f(k)\n",
+        "        else:\n",
+        "            integration = integration + 4 * f(k)\n",
+        "\n",
+        "    # Finding final integration value\n",
+        "    integration = integration * h/3\n",
+        "\n",
+        "    return integration\n",
+        "\n",
+        "def get_Pj(xt, vt,t, log_K, j, kappa, theta, rho, lam, max_x):\n",
+        "  fj = get_heston_cfun(j, kappa, theta, rho, lam, T, q = 0)\n",
+        "  fj_fun = lambda psi,  : fj(psi, t, xt, vt)\n",
+        "  def fun(psi):\n",
+        "    return np.real((np.exp(-1j*psi*log_K)*fj_fun(psi))/(1j*psi))\n",
+        "\n",
+        "  int_part = simpson13(0.001,max_x,n=100_000, f=fun)\n",
+        "  Pj = 1/2 + 1/np.pi*int_part\n",
+        "  return Pj\n",
+        "\n",
+        "def get_heston_call_an(st, vt, t,T, K, kappa, theta, rho, lam=0.5):\n",
+        "  tau = T - t\n",
+        "\n",
+        "  xt = np.log(st)\n",
+        "  max_x = 100*xt\n",
+        "  P1 = get_Pj(xt=xt, vt=vt,t=t, log_K=np.log(K), j=1, kappa=kappa, theta=theta, rho=rho, lam=lam, max_x = max_x)\n",
+        "  P2 = get_Pj(xt=xt, vt=vt,t=t, log_K=np.log(K), j=2, kappa=kappa, theta=theta, rho=rho, lam=lam, max_x = max_x)\n",
+        "  price = st*P1 - K*np.exp(-r*tau)*P2\n",
+        "  return price\n",
+        "\n"
       ],
       "metadata": {
         "id": "xanXYR7uZinh"
       },
-      "execution_count": 24,
+      "execution_count": 36,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "call_heston_mc = call_option_heston_mc(T=1, n_paths=10_000, rho=0.5, r=0.05, kappa=1, theta=1, sigma=0.2,S0=100, V0=0.1, strike=90)"
+        "lam = 1\n",
+        "r = 0.05\n",
+        "kappa = 1\n",
+        "kappa_star = kappa + lam\n",
+        "theta = 1\n",
+        "theta_star = kappa*theta/(kappa + lam)\n",
+        "sigma = 0.02\n",
+        "S0 = 100\n",
+        "V0 = 0.1\n",
+        "strike = 90\n",
+        "rho = 0.5\n",
+        "call_heston_mc = call_option_heston_mc(T=1, n_paths=10_000, rho=rho, r=r, kappa=kappa_star, theta=theta_star, sigma=sigma,S0=S0, V0=V0, strike=strike)\n",
+        "call_heston_an = get_heston_call_an(st=S0, vt=V0, t=0,T=1, K=strike, kappa=kappa, theta=theta, rho=0.5, lam=lam)"
       ],
       "metadata": {
         "id": "tMuELFjkoP1Q"
       },
-      "execution_count": 25,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -197,9 +272,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fVBrRRPyq0Sk",
-        "outputId": "1d7e1079-2771-4ba4-f295-8a233a437e76"
+        "outputId": "50b381e6-cd6a-4595-8163-1c57911acd24"
       },
-      "execution_count": 26,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,9 +287,41 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "print(call_heston_an)"
+      ],
       "metadata": {
         "id": "1GARVPERrCwG"
+      },
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tAagKc0BTNa1",
+        "outputId": "cba9f09f-d5b9-4e6b-ce12-7b5bafa944f6"
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "28.817079086783593\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "qMmRPXCzTRRO"
       },
       "execution_count": null,
       "outputs": []
